css/main.css
body {
  cursor: default;
  -webkit-user-select: text;
  -webkit-touch-callout: text;
  font-family: Lato;
  font-size: 14px;
  font-size: 0.73vw;
  margin: 0;
  animation: fadein 1.5s;
  -moz-animation: fadein 1.5s;
  /* Firefox */
  -webkit-animation: fadein 1.5s;
  /* Safari and Chrome */
  -o-animation: fadein 1.5s;
  /* Opera */
}

/*--------------------
Welcome title
--------------------*/
.title {
  font-family: adobe-garamond-pro;
  font-size: 120px;
  font-size: 6.25vw;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  white-space: nowrap;
  opacity: 1;
}

/*--------------------
Nav aka footer
--------------------*/
.allmighty {
  position: absolute;
  left: 50%;
  bottom: 10%;
  transform: translate(-50%);
  text-align: center;
  text-transform: uppercase;
  font-weight: bold;
}

.allmighty a {
  text-decoration: none;
  color: inherit;
}

.allmighty p {
  margin: 0;
}

noscript {
  position: absolute;
  opacity: 0;
  color: red;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-family: inherit;
  text-transform: uppercase;
  font-weight: bold;
}

img.ttl {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 80%;
  height: 60%;
  object-fit: cover;
  opacity: 0;
  z-index: -1;
}

img.ttl2 {
  opacity: 1;
}

.allmighty:hover~.title,
.allmighty:focus~.title {
  opacity: 0;
}

.allmighty:hover~noscript,
.allmighty:focus~noscript,
.allmighty:active~noscript {
  opacity: 1;
}

.allmighty a#wth p span {
  content: "BRU?";
}

.allmighty a:hover p span,
.allmighty a:focus p span,
.allmighty a:active p span {
  display: none;
}

.allmighty a#wth:hover p:after,
.allmighty a#wth:focus p:after,
.allmighty a#wth:active p:after {
  text-decoration: line-through;
  content: 'LEARN MORE';
}

/*--------------------
Content page
--------------------*/
.content-wrapper {
  position: absolute;
  left: 0;
  padding: 7vw;
}

img.pg {
  position: relative;
  width: 100%;
  height: 30vw;
  object-fit: cover;
}

img.profile {
  object-fit: cover;
  border-radius: 50%;
  width: 100%;
}

.column {
  float: left;
  padding: 10px 2%;
  box-sizing: border-box;
  font-size: 1vw;
}

.left {
  width: 17%;
  text-align: center;
  text-transform: uppercase;
}

.right {
  width: 83%;
  text-align: justify;
}

.row {
  padding: 2vw;
  box-sizing: border-box;
}

.row:after {
  content: "";
  display: table;
  clear: both;
}

.content-wrapper h1 {
  font-family: adobe-garamond-pro;
  font-size: 2vw;
  margin: 0;
  padding: 0;
}

a.back {
	width: 3vmin;
	height: 3vmin;
	box-sizing: border-box;
	position: fixed;
	left: 20px;
	top: 25px;
	transform: rotate(-135deg);
}

a.back::before {
		content: '';
		width: 100%;
		height: 100%;
		border-width: .8vmin .8vmin 0 0;
		border-style: solid;
		transition: .2s ease;
		display: block;
		transform-origin: 100% 0;
	}

a.back:after {
		content: '';
		float: left;
		position: relative;
		top: -100%;
		width: 100%;
		height: 100%;
		border-width: 0 .8vmin 0 0;
		border-style: solid;
		transform-origin: 100% 0;
		transition:.2s ease;
	}

a.back:hover::after {
		transform: rotate(45deg);
		height: 120%;
	}

a.back:hover::before {
		transform: scale(.8);
	}

/*--------------------
Magic fade
--------------------*/
@keyframes fadein {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@-moz-keyframes fadein {

  /* Firefox */
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@-webkit-keyframes fadein {

  /* Safari and Chrome */
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@-o-keyframes fadein {

  /* Opera */
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.fade {
  transition: opacity .25s ease-in-out;
  -moz-transition: opacity .25s ease-in-out;
  -webkit-transition: opacity .25s ease-in-out;
}

/*--------------------
Responsiveness
--------------------*/
@media only screen and (max-width: 1400px) {
  body {
    font-size: 12px;
    font-size: 1vw;
  }

  .title {
    font-size: 7vw;
  }

  .column {
    font-size: 1.4vw;
  }

  .content-wrapper h1 {
    font-size: 2.7vw;
  }
}

@media only screen and (max-width: 1000px) {
  body {
    font-size: 1.5vw;
  }

  .title {
    font-size: 7.5vw;
  }

  .column {
    font-size: 1.8vw;
  }

  .content-wrapper h1 {
    font-size: 3.2vw;
  }
}

@media only screen and (max-width: 720px) {
  body {
    font-size: 2vw;
  }

  .title {
    font-size: 8vw;
  }

  .column {
    font-size: 2.2vw;
    float: none;
  }

  .left,
  .right {
    width: 100%;
  }

  img.pg {
    display: none;
  }

  img.profile {
    width: 50%;
  }

  .content-wrapper h1 {
    font-size: 3.7vw;
  }
}

@media only screen and (max-width: 550px) {
  body {
    font-size: 2.5vw;
  }

  .title {
    font-size: 9vw;
  }

  .column {
    font-size: 3vw;
  }

  img.profile {
    width: 60%;
  }

  .content-wrapper h1 {
    font-size: 5vw;
  }
}

@media only screen and (max-width: 420px) {
  body {
    font-size: 3.5vw;
  }

  .title {
    font-size: 10.5vw;
  }

  .column {
    font-size: 4vw;
  }

  .content-wrapper h1 {
    font-size: 6vw;
  }
}

